--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>DevConnector: A social network for Developers</title>
+    <title>DevNet: A social network for Developers</title>
   </head>
 
   <body>
